--- a/style.css
+++ b/style.css
@@ -1,13 +1,52 @@
-
 body {
-font-family: arial, sans-serf;
-background:#ofofof
+font-family: Arial, sans-serif;
+background: #0f0f0f;
 padding: 20px;
-text-aling;center;
-{
-
+text-align: center;
+}
 .video-box {
-blackgroud: #a62121
-  padding: 10px;
-  border-radius: 6px;
-  max-win
+background: #a62121;
+padding: 10px;
+border-radius: 6px;
+max-width: 560px;
+margin: auto;
+box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+video {
+width: 100%;
+border-radius: 4px;
+}
+.info {
+}
+margin-top: 8px;
+.info h3 {
+font-size: 16px;
+margin: 4px 0;
+color: #002f6c;
+}
+.info p {
+font-size: 13px;
+color: #e0dfdf;
+header {
+background-color: #2a2c39;
+color: #BDC3C7;
+font-family: Arial, sans-serif;
+text-align: center;
+height: 100px;
+margin: 0;
+border: none;
+width: 100%;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+html, body {
+margin: 0;
+padding: 0;
+}
+*
+{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
